[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.2"
chrono = { version = "0.4.24", features = ["clock"] }
config = "0.13.3"
htmlescape = "0.3.1"
once_cell = "1.17.1"
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "2.1.2"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
validator = "0.16.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "2.6.1"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.5.18"
linkify = "0.9.0"
